--- a/css/styles.css
+++ b/css/styles.css
@@ -7,12 +7,12 @@ body *{
   }
   
   body {
-	background-color: white;
+	background-color: black;
   }
   
   .page {
 	width: 850px;
-	background-color: lightblue;
+	background-color: white;
 	margin: auto;
 	padding: 50px;
 	padding-top: 35px;
